--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="condition">Condition</string>
     <string name="location">Location</string>
     <string name="temperature">Temperature</string>
+    <string name="preferences">App_Preferences</string>
 </resources>
